# seq-cov

./: CMakeLists.txt  CMakeSettings.json
source/: gui.cpp  gui.hpp  main.cpp  seq-cov.cpp  seq-cov.hpp
